package ro.techvault.authservice.enums;

public enum AccountStatus {
    PENDING_CONSENT,
    ACTIVE,
    SUSPENDED
}
