package ro.techvault.authservice.enums;

public enum UserRole {
    LEARNER,
    GUARDIAN,
    ADMIN
}
