package ro.techvault.content_service.enums;

public enum ContentStatus {
    DRAFT,
    PUBLISHED
}