package ro.techvault.content_service.enums;

public enum QuestType {
    CODE_CHALLENGE,
    QUIZ
}
