package ro.techvault.progress_service.enums;

public enum BadgeCriteriaType {
    COMPLETE_QUESTS,
    COMPLETE_VAULT,
    STREAK_DAYS,
    CODE_LINES // Example from your text
}