package ro.techvault.user_service.models;

import jakarta.persistence.Entity;

@Entity
public class Admin extends User {
}
